src/style.css
@property --gradient-angle{
    syntax: "<angle>";
    initial-value: 0deg;
    inherits: false;
}

@keyframes rotation {
    0% { --gradient-angle: 0deg; }
    100% { --gradient-angle: 360deg; }
}

:root{
    --clr-1: rgb(21, 20, 20);
    --clr-2: rgb(24, 18, 41);
    --clr-3: rgb(28, 178, 166);
    --clr-4: rgb(113, 29, 143);
    --clr-5: rgb(101, 65, 247);
    --clr-6: rgba(255, 255, 255, 0.773);
}

body{
    display: grid;
    width: 100vw;
    margin: 0px;
    padding: 0px;
    background-color: var(--clr-1);
    color: var(--clr-6);
    grid-template-areas: "header header"
    "sidebar body"
    "footer footer";
    /* grid-template: auto 1fr / 1fr 5fr; */
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
}

#header{
    height: 15vh;
    display: grid;
    font-size: 750%;
    font-weight: 900;
    grid-template: 1fr / 1fr 1fr 1fr;
    align-items: center;
    justify-content: center;
    grid-area: header;
    /* min-width: 100vw; */

}

#header-title-div{
    display: grid;
    align-items: center;
    align-content: center;
    text-align: center;
}

#footer{
    height: 8vh;
    display: grid;
    grid-area: footer;
}

#sidebar{
    display: grid;
    width: 18vw;
    height: 100vh;
    grid-area: sidebar;
    align-items: center;
    justify-content: center;
    gap: 1vh;
}

#body{
    display: grid;
    justify-content: center;
    align-items: center;
    grid-area: body;
    width: 85vw;
}

#sidebar-icon-div{
    display: grid;
    height: 15vw;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr;
    justify-content: center;
    align-items: center;
}

#sidebar-icon-sub-div{
    display: grid;
    grid-template-rows: 1fr 1fr 1fr;
    grid-template-columns: 1fr;
    justify-content: center;
    align-items: center;
}

#sidebar-icon-sub-sub-div{
    background-color: var(--clr-2);
    font-size: xx-large;
    font-weight: bold;
    display: grid;
    justify-content: center;
    align-items: center;
    padding: 0.75vw;
}
.button-outline{
    background-color: var(--clr-2);
    position: relative;
    border-radius: 2rem;
}
.button-outline::before,
.button-outline::after{
    content: "";
    position: absolute;
    inset: -0.075rem;
    background: conic-gradient(
        from var(--gradient-angle),
        var(--clr-3),
        var(--clr-4),
        var(--clr-5),
        var(--clr-4),
        var(--clr-3)
    );
    border-radius: inherit;
    animation: rotation 15s linear infinite;
    z-index: -1;
}
.button-outline::after{
    filter: blur(2.0rem);
}

#projects-container{
    display: grid;
    width: 70vw;
    min-height: 60vh;
    align-items: center;
    justify-content: center;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr 5fr;
}

#projects-container-title{
    display: grid;
    font-weight: bolder;
    font-size: x-large;
    align-items: center;
    justify-content: center;
}

#sidebar-projects-section{
    display: grid;
    width: 100%;
    align-items: center;
    justify-content: center;
    font-size: x-large;
    font-weight: bold;
    padding: 1vw;
}

#sidebar-projects-section-title{
    display: grid;
    align-items: center;
    justify-content: center;
    padding: 1.5vw;
    gap: 2vh;
    font-weight: bold;
    font-size: x-large;
}

#listed-projects{
    min-height: 35vh;
}

#general-tasks-section{
    display: grid;
    justify-content: center;
    align-items: center;
    padding: 0.7vw;
}

.sidebar-links{
    transition: font-size ease 500ms;
}
.sidebar-links:hover{
    font-size: 104%;
}

